refactor: improve code formatting and structure across multiple files

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-  "crons": [{
-    "path": "/api/rebuild",
-    "schedule": "59 8 * * *" 
-  }]
+	"crons": [
+		{
+			"path": "/api/rebuild",
+			"schedule": "59 8 * * *"
+		}
+	]
 }
